# vidhana

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  bump-version.sh  cyrb.toml
.github/workflows/: ci.yml  release.yml
crates/vidhana-ai/: Cargo.toml
crates/vidhana-ai/src/: lib.rs
crates/vidhana-api/: Cargo.toml
crates/vidhana-api/src/: lib.rs
crates/vidhana-backend/: Cargo.toml
crates/vidhana-backend/src/: backends.rs  lib.rs  service.rs
crates/vidhana-core/: Cargo.toml
crates/vidhana-core/src/: lib.rs
crates/vidhana-mcp/: Cargo.toml
crates/vidhana-mcp/src/: lib.rs
crates/vidhana-settings/: Cargo.toml
crates/vidhana-settings/src/: lib.rs
crates/vidhana-ui/: Cargo.toml
crates/vidhana-ui/src/: lib.rs
docs/development/: ROADMAP.md
lib/: alloc.cyr  assert.cyr  bench.cyr  bounds.cyr  fmt.cyr  hashmap.cyr  io.cyr  json.cyr  process.cyr  str.cyr  syscalls.cyr  tagged.cyr
src/: main.cyr  main.rs
tests/: test.sh
