[package]
name = "vidhana-api"
version = "2026.3.18"
edition = "2024"
description = "REST API and system integration for Vidhana"
license = "GPL-3.0"

[dependencies]
vidhana-core = { path = "../vidhana-core" }
vidhana-settings = { path = "../vidhana-settings" }
vidhana-ai = { path = "../vidhana-ai" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
