[package]
name = "vidhana-backend"
version = "2026.3.18"
edition = "2024"
description = "System backends and settings service for Vidhana — AGNOS system settings"
license = "GPL-3.0"

[dependencies]
vidhana-core = { path = "../vidhana-core" }
vidhana-settings = { path = "../vidhana-settings" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
